# cv-football-analysis-system

./: .gitignore  README.md  misc.txt
football-analysis/: pyproject.toml
football-analysis/football_analysis/: yolo_inference.py
