[tool.poetry]
name = "football-analysis"
version = "0.1.0"
description = ""
authors = ["muriloms <ms7murilo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "^8.2.2"
supervision = "^0.19.0"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
